topic 9